@@ -1,3 +1,8 @@
+2007-08-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Avoid mishandling chatstate (xep-0085) notification 
+	messages if we get them.
+
 2007-08-22  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl:  Use a procedure to create all our dialogs and get
